<resources>

    <!-- App Name -->

    <string name="app_name">Blocspot</string>

    <!-- Toolbar Titles -->

    <string name="list_mode_text">List Mode</string>
    <string name="map_mode_text">Map Mode</string>
    <string name="ic_search_text">Search</string>
    <string name="filter_category">Filter by Category</string>
    <string name="list_fragment_text">List Fragment</string>
    <string name="map_fragment_text">Map Fragment</string>

    <!-- SearchView strings -->

    <string name="search_hint">Search Place</string>
    <string name="search_activity">Search Activity</string>

    <!-- Dummy POI content for Layout -->

    <string name="text_dummy_distance">0.25 mi</string>
    <string name="text_dummy_comment">This is a weird name for a place but I give it props to the owner for giving it a unique name!</string>
    <string name="text_poi_name">The Fancy Derp Fish</string>

    <!-- Geofence Strings -->

    <string name="geofence_not_available">Error: Geofence not available</string>
    <string name="geofence_too_many_geofences">Error: Too many Geofences!</string>
    <string name="geofence_too_many_pending_intents">Error: Too many geofence pending intents!</string>
    <string name="unknown_geofence_error">Error: Unknown Geofence</string>
    <string name="geofence_transition_notification_text">Notifying Geofence</string>
    <string name="geofence_transition_entered">Geofence Entered</string>
    <string name="geofence_transition_exited">Geofence Exited</string>
    <string name="unknown_geofence_transition">Unknown Geofence Transition</string>
    <string name="geofence_transition_invalid_type">Invalid Geofence Type</string>

    <!-- AlertDialog String -->

    <string name="alert_dialog_ok">Ok</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_two_button_title">Filter by Category</string>
    <string name="fbc_title_text">Filter by Category</string>
    <string name="alert_dialog_okay">Ok</string>
    <string name="fbc_add_category_text">+</string>
    <string name="fbc_edit_category">Edit</string>
    <string name="fbc_dialog_title">Filter by Category</string>
    <string name="btn_cancel_text">Cancel</string>
    <string name="btn_ok_text">Ok</string>
    <string name="result_dialog">Result Dialog</string>
    <string name="result_item_visit_site">Visit Site</string>
    <string name="result_item_set_as_poi">Set as Favorite</string>
    <string name="result_item_cancel">Cancel</string>

    <string name="catergory_string">Category:</string>
    <string name="category_name">Restaurants</string>
    <string name="poi_note_text">[NOTE]</string>
    <string name="default_poi_description">None for now :(</string>
    <string name="edit_text_instruction">Enter note here (optional)</string>
    <string name="edit_category_instructions">Edit category below:</string>
    <string name="edit_note_instructions">Edit note below:</string>
</resources>
