<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/click_effect">

    <!-- Convert this to an individual relativelayout tomorrow -->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginRight="8dp">

        <CheckBox
            android:id="@+id/cb_has_visited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/material_red_dark"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tv_dist_to_poi"
            style = "@style/POI_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/cb_has_visited"
            android:layout_alignParentLeft="true"
            android:text="@string/text_dummy_distance" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            style="@style/POI_name"
            android:id="@+id/tv_poi_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/tv_poi_description"
            android:text="@string/text_poi_name"/>

        <TextView
            style="@style/POI_description"
            android:id="@+id/tv_poi_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_poi_name"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/text_dummy_comment"/>

    </RelativeLayout>

</LinearLayout>